# meds-torch-data

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTORS.md  README.md  conftest.py  mkdocs.yml  pyproject.toml
.github/workflows/: benchmark.yaml  code-quality-main.yaml  code-quality-pr.yaml  python-build.yaml  setup.yaml  tests.yaml
benchmark/: conftest.py  run.py
src/meds_torchdata/: __init__.py  config.py  multiwindow_pytorch_dataset.py  pytest_plugin.py  pytorch_dataset.py  pytorch_multiwindow_dataset.py  random_windows_pytorch_dataset.py  types.py  utils.py
src/meds_torchdata/extensions/: __init__.py  lightning.py  lightning_datamodule.py  lightning_datamodule_single_window.py
src/meds_torchdata/preprocessing/: README.md  __init__.py  __main__.py  tensorization.py  tokenization.py
src/meds_torchdata/preprocessing/configs/: _MTD_preprocess.yaml  _reshard_then_MTD_preprocess.yaml  _reshard_then_tensorize.yaml  _tensorize.yaml  main.yaml  runner.yaml
tests/: __init__.py  conftest.py  test_datamodules.py  test_lightning_datamodule.py  test_pytorch_dataset.py  test_pytorch_dataset_properties.py
tests/preprocessing/: __init__.py  test_preprocess.py  test_preprocess_parallel.py  test_tensorization.py  test_tokenization.py
